--- a/portalviz/index.html
+++ b/portalviz/index.html
@@ -2,11 +2,11 @@
 <meta charset="utf-8">
 
 <!-- load D3js -->
-<script src="//d3plus.org/js/d3.js"></script>
+<script src="https://d3plus.org/js/d3.js"></script>
 
 <!-- load D3plus after D3js -->
-<script src="//d3plus.org/js/d3plus.js"></script>
-<script src ="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://d3plus.org/js/d3plus.js"></script>
+<script src ="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <!-- create container element for visualization -->
 <div id="viz"></div>
 
